[gd_scene load_steps=7 format=3 uid="uid://bsuparv4ev2j4"]

[ext_resource type="Script" path="res://_components/projectiles/projectile_2d.gd" id="1_qq2hn"]
[ext_resource type="PackedScene" uid="uid://b3ys8iwhlsnis" path="res://_abilities/other/damage_on_touch_ability.tscn" id="2_twqtx"]
[ext_resource type="Script" path="res://_abilities/other/health_ability.gd" id="3_ot8fk"]
[ext_resource type="Script" path="res://_components/projectiles/state/launch.gd" id="4_h66d7"]
[ext_resource type="Script" path="res://_components/projectiles/state/destory.gd" id="7_fplla"]

[sub_resource type="GDScript" id="GDScript_uhq8u"]
script/source = "extends StateMachine

func _ready() -> void:
    super._ready()

"

[node name="Projectile2D" type="Area2D"]
z_index = 1
collision_mask = 2
script = ExtResource("1_qq2hn")

[node name="DamageOnTouchAbility" parent="." instance=ExtResource("2_twqtx")]
damage_self = true

[node name="HealthAbility" type="Node" parent="."]
script = ExtResource("3_ot8fk")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = SubResource("GDScript_uhq8u")
start_state = NodePath("Launch")

[node name="Launch" type="Node" parent="StateMachine"]
script = ExtResource("4_h66d7")

[node name="Destory" type="Node" parent="StateMachine"]
script = ExtResource("7_fplla")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HitDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="killed" from="HealthAbility" to="." method="_on_health_ability_killed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="HitDelayTimer" to="." method="_on_hit_delay_timer_timeout"]
